<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentOperations">

    <RelativeLayout
        android:id="@+id/login_background"
        android:layout_width="0dp"
        android:layout_height="185dp"
        android:background="@drawable/pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </RelativeLayout>

    <TextView
        android:id="@+id/tvStudentOperations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/student_operations"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/btnViewAnnouncementEvent"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#4AFFEB3B"
        android:fontFamily="sans-serif-light"
        android:onClick="onClick"
        android:text="@string/view_announcement_and_event"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStudentOperations"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/btnCheckQualification"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:backgroundTint="#48FFC107"
        android:fontFamily="sans-serif-light"
        android:onClick="onClick"
        android:text="@string/check_qualification"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewAnnouncementEvent"
        app:layout_constraintVertical_bias="0.045" />

    <Button
        android:id="@+id/btnGenerateComplaint"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:backgroundTint="#364CAF50"
        android:fontFamily="sans-serif-light"
        android:onClick="onClick"
        android:text="@string/post_complaint"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheckQualification"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/btnRSVPforEvent"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:backgroundTint="#2F009688"
        android:fontFamily="sans-serif-light"
        android:onClick="onClick"
        android:text="@string/rsvp_for_an_event"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGenerateComplaint"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/btnCommentRateEvent"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:backgroundTint="#3200BCD4"
        android:fontFamily="sans-serif-light"
        android:onClick="onClick"
        android:text="@string/comment_rate_an_event"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRSVPforEvent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/btnStudentLogOut"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:backgroundTint="#D5D5D5"
        android:fontFamily="sans-serif-medium"
        android:onClick="onClick"
        android:text="@string/student_log_out"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCommentRateEvent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome! "
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_background"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tvStudentOperations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/login_background"
        app:layout_constraintVertical_bias="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>